--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "express": "^5.1.0",
     "express-flash": "^0.0.2",
     "express-session": "^1.18.1",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
+    "fs": "^0.0.1-security",
     "mongoose": "^8.15.0",
     "multer": "^2.0.0",
     "multer-storage-cloudinary": "^4.0.0",
