--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.18.1",
     "ffmpeg-static": "^5.2.0",
+    "ffprobe-static": "^3.1.0",
     "fluent-ffmpeg": "^2.1.3",
+    "fluent-ffprobe": "^1.5.3",
     "fs": "^0.0.1-security",
     "mongoose": "^8.15.0",
     "multer": "^2.0.0",
